force-app/main/default/objects/RollupBatchSettings__c/RollupBatchSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for Rollup Batch jobs.</description>
    <label>Rollup Batch Settings</label>
</CustomObject>