force-app/main/default/objects/RollupBatchSettings__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <description>A filter to apply to the source records being queried (e.g., Type = &apos;Email&apos; OR Type = &apos;Call&apos;).</description>
    <inlineHelpText>A filter to apply to the source records being queried (e.g., Type = &apos;Email&apos; OR Type = &apos;Call&apos;).</inlineHelpText>
    <label>Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>