force-app/main/default/objects/RollupBatchSettings__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>The roll-up function to apply. Valid values are: &apos;COUNT&apos;, &apos;AVG&apos;, &apos;LAST&apos; (i.e., most recent).</description>
    <inlineHelpText>The roll-up function to apply. Valid values are: &apos;COUNT&apos;, &apos;AVG&apos;, &apos;LAST&apos; (i.e., most recent).</inlineHelpText>
    <label>Function</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>