force-app/main/default/objects/RollupBatchSettings__c/fields/Merge_Field__c.field-meta.xml
<CustomField>
    <fullName>Merge_Field__c</fullName>
    <description>The field on the source object that looks up to the target object (i.e., the parent object). For instance, if a field on Opportunity is being rolled up to a field on an Account, the merge field would be &apos;AccountId.&apos;</description>
    <inlineHelpText>The field on the source object that looks up to the target object (i.e., the parent object). For instance, if a field on Opportunity is being rolled up to a field on an Account, the merge field would be &apos;AccountId.&apos;</inlineHelpText>
    <label>Merge Field</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>