force-app/main/default/objects/RollupBatchSettings__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>The field on which the roll-up is being performed.</description>
    <inlineHelpText>The field on which the roll-up is being performed.</inlineHelpText>
    <label>Source Field</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>