force-app/main/default/objects/RollupBatchSettings__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The object whose field is being rolled up.</description>
    <inlineHelpText>The object whose field is being rolled up (in other words, the child object).</inlineHelpText>
    <label>Source Object</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>