force-app/main/default/objects/RollupBatchSettings__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>The field on the target in which we&apos;re storing the rolled up value.</description>
    <inlineHelpText>The field on the target in which we&apos;re storing the rolled up value.</inlineHelpText>
    <label>Target Field</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>