force-app/main/default/objects/RollupBatchSettings__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>The object on which we are storing the roll-up (i.e., the parent object).</description>
    <inlineHelpText>The object on which we are storing the roll-up (i.e., the parent object).</inlineHelpText>
    <label>Target Object</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>